--- a/goApp/app.yaml
+++ b/goApp/app.yaml
@@ -17,8 +17,11 @@ spec:
         image: gaurav04/go-app:latest
         resources:
           limits:
-            memory: "128Mi"
-            cpu: "500m"
+            cpu: 250m
+            memory: 150Mi
+          requests:
+            cpu: 200m
+            memory: 100Mi        
         ports:
         - containerPort: 8081
 ---
