--- a/kyverno/policies/disallow_latest_tag.yaml
+++ b/kyverno/policies/disallow_latest_tag.yaml
@@ -13,7 +13,7 @@ metadata:
       image changes. A best practice is to use an immutable tag that maps to 
       a specific version of an application pod.
 spec:
-  validationFailureAction: audit
+  validationFailureAction: enforce
   rules:
   - name: require-image-tag
     match:
