--- a/demo2/goApp/app.yaml
+++ b/demo2/goApp/app.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: gaurav04/go-app:latest
+        image: gaurav04/go-app:b914200
 
         resources:
           limits:
